# simple_taskmgr

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/authentication/: admin.py  client.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_role.py  0003_alter_user_managers_remove_user_role.py  0004_alter_user_managers_user_company.py  0005_alter_user_managers.py
apps/authentication/tests/: test_models.py
apps/core/: models.py  throttling.py
apps/core/migrations/: 0001_initial.py
apps/rbac/: admin.py  apps.py  client.py  models.py
apps/rbac/migrations/: 0001_initial.py  0002_policy_deleted_at_role_deleted_at_and_more.py
apps/tasks/: client.py  models.py  permissions.py  serializers.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_category_alter_task_managers_alter_task_status_and_more.py  0003_alter_category_managers_alter_task_managers.py
apps/tasks/tests/: test_flow.py  test_isolation.py
config/: urls.py
config/settings/: base.py  local.py
